Rename everything else  from workshop -> supplier
