# backend/src/controllers/supplierController.ts
@@ -1,5 +1,5 @@
 import { Request, Response, NextFunction } from "express";
-import * as workshopService from "../services/supplierService";
+import * as supplierService from "../services/supplierService";
 import * as userService from "../services/userService";
 import { ISupplier } from "../models/supplierModel";
 import { Types } from "mongoose";
@@ -14,7 +14,7 @@ export const createSupplier = async (
   try {
     const supplierData: ISupplier = req.body;
     const user = res.locals.user!;
-    const newSupplier = await workshopService.createWorkshop(supplierData);
+    const newSupplier = await supplierService.createSupplier(supplierData);
     await userService.updateUserById(user.id, {
       supplierId: newSupplier.id,
     });
@@ -32,7 +32,7 @@ export const getSuppliers = async (
 ) => {
   try {
     const pagination = get_pagination(req.query);
-    const { values, total } = await workshopService.getWorkshops(pagination);
+    const { values, total } = await supplierService.getSupplier(pagination);
     res.status(200).json({ values, total });
   } catch (error) {
     next(error);
@@ -46,7 +46,7 @@ export const getSupplierById = async (
 ) => {
   try {
     const supplierId: Types.ObjectId = req.sanitizedParams.id as Types.ObjectId;
-    const supplier = await workshopService.getWorkshopById(supplierId);
+    const supplier = await supplierService.getSupplierById(supplierId);
     if (!supplier) {
       res.status(404).json(MESSAGES.SUPPLIER_NOT_FOUND);
     } else {
@@ -65,7 +65,7 @@ export const updateSupplierById = async (
   try {
     const supplierId: Types.ObjectId = req.sanitizedParams.id as Types.ObjectId;
     const supplierData: Partial<ISupplier> = req.body;
-    const updatedSupplier = await workshopService.updateWorkshop(
+    const updatedSupplier = await supplierService.updateSupplier(
       supplierId,
       supplierData
     );
@@ -86,8 +86,8 @@ export const deleteSupplierById = async (
 ) => {
   try {
     const supplierId: Types.ObjectId = req.sanitizedParams.id as Types.ObjectId;
-    const supplierWorkshop = await workshopService.deleteWorkshop(supplierId);
-    if (!supplierWorkshop) {
+    const supplier = await supplierService.deleteSupplier(supplierId);
+    if (!supplier) {
       res.status(404).json(MESSAGES.SUPPLIER_NOT_FOUND);
     } else {
       res.status(204).json(MESSAGES.SUPPLIER_DELETED);
